js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-arrow-assignment-expression-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
let
f
=
(
)
=
>
import
(
'
.
/
empty_FIXTURE
.
js
'
)
;
reportCompare
(
0
0
)
;
