js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-arrow-import-defer-no-rest-param.js
DONOTEVALUATE
(
)
;
let
f
=
(
)
=
>
{
import
.
defer
(
.
.
.
[
'
.
/
empty_FIXTURE
.
js
'
]
)
;
}
;
